# ppinfo

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: release.yml  tox.yml
src/ppinfo/: __init__.py
test/: __init__.py  test_ppinfo.py
test/fixtures/proj1/: setup.cfg
test/fixtures/py310/: setup.cfg
