[metadata]
name = ppinfo
description = Python Project Info retries information about python projects, such packaging metadata.
long_description = file: "README.md"
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
keywords =
  pypi
  packaging
license = MIT

[options]
use_scm_version = True
python_requires = >=3.7
package_dir =
  = src
packages = find:

[options.extras_require]
test =
  pytest > 6.0.0
  pytest-cov[all]

[options.packages.find]
where = src

[options.package_data]
* =
  py.typed
